hydroflow/tests/compile-fail/surface_demux_port_extra.stderr
error: Argument specifying the output ports in `demux(..)` does not contain extra port `d`: ($DIR/tests/compile-fail/surface_demux_port_extra.rs:15:18) (1/2).
 --> tests/compile-fail/surface_demux_port_extra.rs:5:55
  |
5 |         my_demux = source_iter(0..10) -> demux(|item, var_args!(a, b, c)| {
  |                                                       ^^^^^^^^^^^^^^^^^^

error: Port `d` not found in the arguments specified in `demux(..)`'s closure: ($DIR/tests/compile-fail/surface_demux_port_extra.rs:5:55) (2/2).
  --> tests/compile-fail/surface_demux_port_extra.rs:15:18
   |
15 |         my_demux[d] -> for_each(std::mem::drop);
   |                  ^

warning: unused import: `var_args`
 --> tests/compile-fail/surface_demux_port_extra.rs:1:35
  |
1 | use hydroflow::{hydroflow_syntax, var_args};
  |                                   ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
